--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>LP IA</title>
 </head>
 <body>
-  
+
   <h1>Reconocimiento por Imagen</h1>
   <div class="container-general">
     <div class="container-btn">
@@ -15,10 +15,10 @@
       <button id="cargarBoton">Cargar Imagen</button>
     </div>
     <div class="container-img">
-      <img id="imagenMostrada" src="/img/upload-image.jpg" alt="Imagen seleccionada">
+      <img id="imagenMostrada" src="img/upload-image.jpg" alt="Imagen seleccionada">
     </div>
   </div>
   
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
